--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
-    "server": "nodemon server.js",
-    "lint": "eslint"
+    "server": "node --watch src/server.js",
+    "lint": "eslint",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
@@ -10,9 +11,11 @@
   },
   "dependencies": {
     "@fastify/static": "^6.5.0",
+    "@fastify/swagger": "^8.0.0",
     "@fastify/view": "^7.1.1",
     "fastify": "^4.9.1",
     "handlebars": "^4.7.7",
+    "husky": "^8.0.1",
     "pino-pretty": "^9.1.1"
   }
 }
