--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
   "scripts": {
     "server": "nodemon src/server.js",
-    "lint": "eslint",
+    "lint": "standard",
+    "fix-lint": "standard --fix",
     "prepare": "husky install"
-  },
-  "devDependencies": {
-    "eslint": "^8.25.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
   },
   "dependencies": {
     "@fastify/formbody": "^7.3.0",
@@ -18,6 +14,8 @@
     "handlebars": "^4.7.7",
     "husky": "^8.0.1",
     "nodemon": "^2.0.20",
-    "pino-pretty": "^9.1.1"
+    "pino-pretty": "^9.1.1",
+    "standard": "^17.0.0",
+    "warehouse": "^4.0.2"
   }
 }
