--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fastify/static": "^6.5.0",
     "@fastify/swagger": "^8.0.0",
     "@fastify/view": "^7.1.1",
+    "dotenv": "^16.0.3",
     "fastify": "^4.9.1",
     "handlebars": "^4.7.7",
     "husky": "^8.0.1",
