--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "server": "nodemon src/server.js",
     "lint": "standard",
     "fix-lint": "standard --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "migrate": "node migrate.mjs"
   },
   "dependencies": {
     "@fastify/formbody": "^7.3.0",
@@ -16,7 +17,9 @@
     "handlebars": "^4.7.7",
     "husky": "^8.0.1",
     "nodemon": "^2.0.20",
+    "pg": "^8.8.0",
     "pino-pretty": "^9.1.1",
+    "postgrator": "^5.0.1",
     "standard": "^17.0.0",
     "warehouse": "^4.0.2"
   }
