--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   },
   "dependencies": {
     "@fastify/formbody": "^7.3.0",
-    "@fastify/jwt": "^6.3.3",
+    "@fastify/jwt": "^6.4.0",
     "@fastify/postgres": "^5.1.0",
     "@fastify/static": "^6.5.0",
     "@fastify/swagger": "^8.0.0",
     "@fastify/view": "^7.1.1",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.1",
+    "fastify-plugin": "^4.3.0",
     "handlebars": "^4.7.7",
     "husky": "^8.0.1",
     "nodemon": "^2.0.20",
