--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
     "@fastify/formbody": "^7.3.0",
+    "@fastify/helmet": "^10.1.0",
     "@fastify/jwt": "^6.4.0",
     "@fastify/postgres": "^5.1.0",
     "@fastify/static": "^6.5.0",
@@ -15,6 +16,7 @@
     "@fastify/view": "^7.1.1",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.1",
+    "fastify-bcrypt": "^1.0.1",
     "fastify-plugin": "^4.3.0",
     "handlebars": "^4.7.7",
     "husky": "^8.0.1",
