feat: add cookie signature to improve security

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ HOST="localhost"
 PORT=5432
 DATABASE="urls"
 SECRET_KEY="ds6NJtHT1aJy9amGHTtF3kN7YFoMvZSZ"
+COOKIE_SECRET="I7Q1MaTizqEXAAU4QqBtr9HwlnWbcMk2"
