--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ PORT=5432
 DATABASE="urls"
 SECRET_KEY="ds6NJtHT1aJy9amGHTtF3kN7YFoMvZSZ"
 COOKIE_SECRET="I7Q1MaTizqEXAAU4QqBtr9HwlnWbcMk2"
+SALT="$2b$10$ppHrWgZ096XlSEctzDPYku"
