--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@fastify/helmet": "^10.1.0",
     "@fastify/jwt": "^6.4.0",
     "@fastify/postgres": "^5.1.0",
+    "@fastify/rate-limit": "^7.6.0",
     "@fastify/static": "^6.5.0",
     "@fastify/swagger": "^8.0.0",
     "@fastify/view": "^7.1.1",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.1",
-    "fastify-bcrypt": "^1.0.1",
     "fastify-plugin": "^4.3.0",
     "handlebars": "^4.7.7",
     "husky": "^8.0.1",
