fix: make the url a env variable

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DATABASE="urls"
 SECRET_KEY="ds6NJtHT1aJy9amGHTtF3kN7YFoMvZSZ"
 COOKIE_SECRET="I7Q1MaTizqEXAAU4QqBtr9HwlnWbcMk2"
 SALT="$2b$10$ppHrWgZ096XlSEctzDPYku"
+URLNAME="localhost:3000"
