--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "start": "node src/server.js",
     "server": "nodemon src/server.js",
     "lint": "standard",
     "fix-lint": "standard --fix",
