--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fastify-supabase": "^1.2.1",
     "handlebars": "^4.7.7",
     "husky": "^8.0.1",
+    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "pino-pretty": "^9.1.1",
