--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         node-version: "18.x"
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     - name: Run unit tests
       run: npm test
 
