--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "start": "NODE_ENV=production node src/server.js",
     "dev": "NODE_ENV=development nodemon src/server.js",
+    "start-ci": "NODE_ENV=test node src/server.js",
     "cypress:open": "cypress open",
     "test": "tap",
     "posttest":  "tap --coverage-report=html --no-browser",
